[package]
name = "jwtdecode"
description = "A JWT token decoder"
version = "0.1.0"
authors = ["Micah Hausler <hausler.m@gmail.com>"]
repository = "https://github.com/micahhausler/jwtdecode-rust"
edition = "2018"
license = "MIT"
readme = "README.md"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]

[dependencies]
clap = "2"
base64 = "0.12.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
